# DiscordApi

./: .env  .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: github-actions-test-user-microservice.yml
api_gateway/: .env  Dockerfile  go.mod  go.sum  main.go
api_gateway/environment/: example.env
authorization_microservice/: .env  Dockerfile  alembic.ini  example.env  main.py  pyproject.toml
authorization_microservice/migrations/: env.py
authorization_microservice/src/authorization/: models.py  repository.py  router.py  schemas.py  service.py  utils.py
authorization_microservice/src/broker/: router.py
authorization_microservice/src/registration/: models.py  repository.py  router.py  schemas.py  service.py  utils.py
authorization_microservice/src/settings/: config.py  database.py  exceptions.py  repository.py  service.py  settings.py  utils.py
email_microservice/: Dockerfile  main.py  pyproject.toml
email_microservice/migrations/: env.py
email_microservice/src/auth/: models.py  service.py  utils.py
email_microservice/src/auth/static/templates/: new_auth_device.html
email_microservice/src/settings/: broker.py  database.py  repository.py  service.py  settings.py
event_gateway/: Dockerfile  main.py  pyproject.toml
event_gateway/migrations/: env.py
event_gateway/src/auth/: models.py  repository.py  router.py  service.py  sockets.py  utils.py
event_gateway/src/broker/: router.py
event_gateway/src/email/: service.py
event_gateway/src/email/static/templates/: new_auth_device.html
event_gateway/src/settings/: config.py  database.py  repository.py  service.py  settings.py
nginx/: nginx.conf
private_messages_microservice/: Dockerfile  go.mod  go.sum  main.go
private_messages_microservice/chat/: repository.go  router.go  service.go  struct.go  utils.go
private_messages_microservice/migrations/: MR1_init_chat_table.sql
private_messages_microservice/settings/: database.go  errors.go  exceptions.go  settings.go
user_microservice/: .env  Dockerfile  alembic.ini  example.env  main.py  pyproject.toml
(+58 files in other folders)
