[tool.poetry]
name = "email-microservice"
version = "0.1.0"
description = "microservice for sending email notifications"
authors = ["ledxdeliveryflopp <korstim18@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic-settings = "^2.7.0"
aiofiles = "^24.1.0"
jinja2 = "^3.1.4"
httpx = "^0.28.1"
faststream = {extras = ["kafka"], version = "^0.5.33"}
loguru = "^0.7.3"
psycopg2-binary = "^2.9.10"
asyncpg = "^0.30.0"
alembic = "^1.14.0"
sqlalchemy = "^2.0.36"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
